# pyproject.toml

[project]
dependencies = [
    "healpy",
    "icecube-skyreader>=1.4.2",
    "iminuit<2.27.0",
    "numpy<2.0.0",
    "oms-mqclient",
    "scipy",
    "wipac-dev-tools",
    "wipac-rest-tools",
] # originally migrated from 'setup.cfg' by 'WIPACrepo/wipac-dev-py-setup-action' github action package

[project.optional-dependencies] # originally migrated from 'setup.cfg' by 'WIPACrepo/wipac-dev-py-setup-action' github action package
pulsar = [
    "oms-mqclient[pulsar]",
]
rabbitmq = [
    "oms-mqclient[rabbitmq]",
]
nats = [
    "oms-mqclient[nats]",
]
all = [
    "oms-mqclient[all]",
]
mypy = [
    "oms-mqclient[all]",
]
