[wipac:cicd_setup_builder]
python_min = 3.6
python_max = 3.9
package_dirs = skymap_scanner

[metadata]
version = attr: skymap_scanner.__version__

[options]
install_requires =
    asyncstdlib
    backports.tempfile
    healpy
    tqdm
    wipac-dev-tools[coloredlogs]
    wipac-mqclient-pulsar
python_requires = >=3.6, <3.10
packages = find:

[options.packages.find]
include =
    skymap_scanner
    skymap_scanner.*

[flake8]
ignore = E501
